--- a/Views/Post/Edit.cshtml
+++ b/Views/Post/Edit.cshtml
@@ -29,11 +29,11 @@
                 <input asp-for="PublishedAt" class="form-control" />
                 <span asp-validation-for="PublishedAt" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
                 <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
